[package]
name = "offline_first_core"
repository = "https://github.com/JhonaCodes/offline_first_core"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "High-performance LMDB-based local storage library optimized for FFI integration with Flutter and cross-platform applications"
readme = "README.MD"
keywords = ["lmdb", "ffi", "flutter", "database", "offline"]
categories = ["database", "embedded", "wasm", "api-bindings"]
authors = ["JhonaCodes"]

[lib]
name = "offline_first_core"
crate-type = ["staticlib", "cdylib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[features]
static = []

[dependencies]
lmdb = "0.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"